# MTBDD-Prototype

./: CMakeLists.txt  README.md
models/: n002_k002_a001.eqn  n002_k002_a002.eqn  n002_k002_a003.eqn  n002_k002_a004.eqn  n002_k003_a002.eqn  n002_k003_a003.eqn  n002_k003_a004.eqn  n002_k004_a001.eqn  n002_k004_a002.eqn  n002_k004_a003.eqn  n002_k004_a004.eqn  n002_k005_a001.eqn  n002_k005_a003.eqn  n002_k005_a004.eqn  n002_k006_a001.eqn  n002_k006_a002.eqn  n002_k006_a003.eqn  n002_k006_a004.eqn  n003_k002_a001.eqn  n003_k002_a002.eqn  n003_k002_a003.eqn  n003_k002_a004.eqn  n003_k003_a002.eqn  n003_k003_a003.eqn  n003_k003_a004.eqn  n003_k004_a001.eqn  n003_k004_a002.eqn  n003_k004_a003.eqn  n003_k004_a004.eqn  n003_k005_a001.eqn  n003_k005_a002.eqn  n003_k005_a003.eqn  n003_k005_a004.eqn  n003_k006_a001.eqn  n003_k006_a002.eqn  n003_k006_a003.eqn  n003_k006_a004.eqn  n004_k002_a001.eqn  n004_k002_a002.eqn  n004_k002_a003.eqn  (+279 more)
scripts/: LogReader.java  runTest.sh  runTestNonSym.sh
src/: MTBDD-Proto.cpp  NonSymbolicTest.cpp  Stopwatch.cpp  Stopwatch.h
src/arrayimpl/: ApplyOps.h  NodeCache.cpp  NodeCache.h  NodeTable.cpp  NodeTable.h
src/booleanmodel/: BooleanModel.cpp  BooleanModel.h  FormulaType.h
src/booleanmodel/parser/: BooleanModelParser.cc  BooleanModelParser.h  BooleanModelParserConstants.h  BooleanModelParserTokenManager.cc  BooleanModelParserTokenManager.h  CharStream.cc  CharStream.h  ErrorHandler.h  JavaCC.h  ParseException.cc  ParseException.h  Parser.jj  Token.cc  Token.h  TokenManager.h  TokenMgrError.cc  TokenMgrError.h
